--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -90,6 +90,16 @@
             <div class="tab-pane fade show active group-tab-content" id="content_@groupDetails.groupName.name" role="tabpanel" aria-labelledby="2017_2018-tab">
                 <div class="">
 
+                    <div id="es-and-os-alert" class="alert alert-danger alert-dismissible fade show text-center" data-html="true" >
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+
+                        <p>Remember to hit save below after selecting your Es & Os and Benchmarks.</p>
+
+                        <p>You will need to hit save for each group - i.e. tab.</p>
+                    </div>
+
                     <div class="termly-plans-overview-section-header text-center select-the-es-and-os-header">
                         Select the Es & Os and/or Benchmarks to cover this term for the <strong class="text-info">@groupDetails.groupName.name</strong> group</div>
 
