--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -50,12 +50,12 @@
                 <strong><li>Art</li></strong>
                 <strong><li>Drama</li></strong>
                 <strong><li>Music</li></strong>
-                <strong><li>Reading - Early,First & Second levels</li></strong>
+                <strong><li>Reading</strong> - Early, First and Second levels only for now</li>
                 <strong><li>Maths</li></strong>
             </ul>
                 </p>
 
-                <p>Please only select these for now until the rest are populated</p>
+                <p>Please only select these for now until the rest are populated - should be finished by the end of March</p>
             </div>
         </div>
 
