--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -23,11 +23,13 @@
 
          <div class="in-app-menu-medium-and-up">
              <div class="d-flex">
-                 <ul class="nav mr-auto justify-content-between">
+                 <ul class="nav mx-auto justify-content-between">
                      <li class="nav-item manage-class-nav-item-leftmost">
-                         <a id="addNewClassBtn" class="rounded btn btn-success manage-class-nav-item-rightmost"
-                         href="@controllers.planning.classtimetable.routes.ClassTimetableController.addNewClass()" role="button">
-                             Add New Class</a>
+                         <a id="addNewClassBtn" class="rounded btn btn-success btn-lg manage-class-nav-item-rightmost"
+                         href="@controllers.planning.classtimetable.routes.ClassTimetableController.addNewClass()" role="button"
+                         tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
+                         title="Create a New Class" data-content="Click here to enter the name of your current class(es)">
+                             Create New Class</a>
                      </li>
 
                  </ul>
@@ -82,9 +84,9 @@
                            <div class="col-sm-12 col-md-10 col-xl-8">
                             <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn"
                             data-class-id="@classDetail.id.id" role="button"
-                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
-                            title="Next" data-content="Click here to manage your class"
-                            >Go To Class</button>
+                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="top"
+                            title="Next" data-content="Click here to add maths, literacy groups & set CfE levels">
+                                Go To Class</button>
                            </div>
                           </div>
                          </div>
@@ -97,11 +99,15 @@
                  }</div>
     </div>
       <div class="tab-pane fade teachers-classes" id="2016_2017" role="tabpanel" aria-labelledby="2016_2017-tab">
-              <p class="noClassesMsg text-center">No Classes for this year</p>
+              <p class="noClassesMsg text-center">
+                  This is your class history for previous sessions. It may be useful for handovers or tracking info.
+              </p>
       </div>
       <div class="tab-pane fade teachers-classes" id="2015_2016" role="tabpanel" aria-labelledby="2015-2016-tab">
           <div class="">
-              <p class="noClassesMsg text-center">No Classes for this year</p>
+              <p class="noClassesMsg text-center">
+                  This is your class history for previous sessions. It may be useful for handovers or tracking info.
+              </p>
           </div>
       </div>
     </div>
