--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -65,6 +65,9 @@
                             <div class="col-xs-0 col-lg-5 muted">@userFirstName @userFamilyName</div>
                             <div class="col-xs-3 col-lg-2">
                                 <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-danger btn-block bg-light" role="button"
+                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="left"
+                                title="Create A PDF Of Your Termly Plan"
+                                data-content="Once you have selected all your Es & Os / Benchmarks, then click this button to generate a pdf version of your plan."
                                 href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(teacherClass.id.id)">Download Plan PDF</a>
                             </div>
                         </div>
