--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -77,7 +77,8 @@
                                 title="New group created!" data-content="After a group has been created, you can still
                                 edit the <strong class='text-primary'>group name</strong> and
                                 <strong class='text-primary'>group description</strong> and it will auto save.
-                                If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.">
+                                <br>
+                                <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="mathematics">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -166,7 +167,9 @@
                                 <div class="manage-new-group-row"
                                 tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
                                 title="New group created!" data-content="After a group has been created, you can still
-                                edit the <strong class='text-primary'>group name</strong> and <strong class='text-primary'>group description</strong> and it will auto save. If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.">
+                                edit the <strong class='text-primary'>group name</strong> and <strong class='text-primary'>group description</strong> and it will auto save.
+                                <br>
+                                 <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="reading">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -292,8 +295,9 @@
                                 tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true"
                                 title="New group created!" data-content="After a group has been created, you can still
                                 edit the <strong class='text-primary'>group name</strong> and
-                                <strong class='text-primary'>group description</strong> and it will auto save. If you have
-                                selected an incorrect CfE level then at the moment just delete the group and re-create a new one.">
+                                <strong class='text-primary'>group description</strong> and it will auto save.
+                                <br>
+                                <p>If you have selected an incorrect CfE level then at the moment just delete the group and re-create a new one.</p>">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="writing">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
@@ -387,8 +391,9 @@
                                 title="New group created!" data-content="After a group has been created, you can still
                                 edit the <strong class='text-primary'>group name</strong> and
                                 <strong class='text-primary'>group description</strong> and it will auto save.
-                                If you have selected an incorrect CfE level then at the moment just delete the
-                                group and re-create a new one.">
+                                <br>
+                                <p>If you have selected an incorrect CfE level then at the moment just delete the
+                                group and re-create a new one.</p>">
                                     <div class="form-row manage-class-group-row" data-group-id="@group.groupId.id" data-group-type="spelling">
 
                                         <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
