--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -216,6 +216,18 @@
             </div>
         </div>
 
+
+        <div class="modal" id="doing-stuff" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addNewGroupModalHeader">
+                            ... saving ... </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
