--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -42,6 +42,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#feature-deck">Deck</a>
+                    </li>
                     @if(showFrontPageFeatures) {
                         <li class="nav-item">
                             <a class="nav-link" href="#feature-one">Features</a>
@@ -129,6 +132,61 @@
                 </div>
             </div>
         </div>
+
+        <section id="feature-deck" class="feature-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>The Problem and Our Solution</h2>
+                    </div>
+                </div>
+
+                <div class="feature-content-deck">
+
+                    <div class="row">
+                        <div id="carouselExampleInd" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleInd" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleInd" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleInd" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleInd" data-slide-to="3"></li>
+                                <li data-target="#carouselExampleInd" data-slide-to="4"></li>
+                                <li data-target="#carouselExampleInd" data-slide-to="5"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck1.png")" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck2.png")" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck3.png")" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck4.png")" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck5.png")" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" width="100%" src="@routes.Assets.versioned("images/deck6.png")" alt="First slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleInd" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleInd" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
         @if(showFrontPageFeatures) {
 
@@ -428,13 +486,13 @@
 
                                         <div class="text-left">
                                             <ul class="list-unstyled">
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Some cool feature one</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Another thing that is great</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Don't forget this too</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Finally this comes free as well</li>
                                             </ul>
                                         </div>
@@ -459,13 +517,13 @@
 
                                         <div class="text-left">
                                             <ul class="list-unstyled">
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Some cool feature one</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Another thing that is great</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Don't forget this too</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Finally this comes free as well</li>
                                             </ul>
                                         </div>
@@ -490,13 +548,13 @@
 
                                         <div class="text-left">
                                             <ul class="list-unstyled">
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Some cool feature one</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Another thing that is great</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Don't forget this too</li>
-                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.svg")" alt="Check">
+                                                <li><img class="check-icon" src="@routes.Assets.versioned("/icons/octicons_6_0_1/lib/svg/check.png")" alt="Check">
                                                     Finally this comes free as well</li>
                                             </ul>
                                         </div>
@@ -646,7 +704,7 @@
                         <h6>Excessive planning?</h6>
                         <h5>Sure appears so!</h5>
                         <p class="lead">
-                           A staggering <strong>97%</strong> agreed.
+                            A staggering <strong>97%</strong> agreed.
                         </p>
                     </div>
                     <div class="col-lg-9 d-none d-md-block">
