--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>The Problem and Our Solution</h2>
+                        <h2>The Problem & Our Solution</h2>
                     </div>
                 </div>
 
